--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                         <i class="fas fa-microphone"></i>
                     </div>
                     <h3>Выступления на конференциях</h3>
-                    <p>Доклады на 8 всероссийских и международных педагогических конференциях</p>
+                    <p><a href="https://infourok.ru/user/ivanova-natalya-vitalevna9" target="_blank" style="color: var(--secondary-color); text-decoration: none; font-weight: 600;">Ссылка на Инфоурок</a></p>
                 </div>
                     </div>
                 </div>
