--- a/index.html
+++ b/index.html
@@ -564,21 +564,21 @@
                         <i class="fas fa-envelope"></i>
                     </div>
                     <h3>Email</h3>
-                    <p>ivanova.mp@school123.ru</p>
+                    <p>nat4liaivanow@mail.ru</p>
                 </div>
                 <div class="contact-item">
                     <div class="contact-icon">
                         <i class="fas fa-phone"></i>
                     </div>
                     <h3>Телефон</h3>
-                    <p>+7 (999) 123-45-67</p>
+                    <p>+7 904 356 51 58</p>
                 </div>
                 <div class="contact-item">
                     <div class="contact-icon">
                         <i class="fas fa-school"></i>
                     </div>
                     <h3>Место работы</h3>
-                    <p>ГБОУ "Школа №123"<br>г. Москва, ул. Образцовая, д. 15</p>
+                    <p>МБОУ "Центр образования"<br>г. Торжок, ул. Кирова, д. 31</p>
                 </div>
                 <div class="contact-item">
                     <div class="contact-icon">
@@ -595,7 +595,7 @@
     <footer>
         <div class="container footer-content">
             <h3>Иванова Наталья Витальевна</h3>
-            <p>Участник конкурса "Педагог года 2023"</p>
+            <p>Участник конкурса "Учитель года 2026"</p>
             <div class="social-links">
                 <a href="#"><i class="fab fa-vk"></i></a>
                 <a href="#"><i class="fab fa-telegram"></i></a>
