--- a/index.html
+++ b/index.html
@@ -530,11 +530,12 @@
         <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 2rem; margin-top: 2rem;">
             <div class="achievement-item">
                 <div class="achievement-icon">
-                    <i class="fas fa-microphone"></i>
+                    <i class="fas fa-fish"></i>
                 </div>
-                <h3>Выступления на конференциях</h3>
-                <p><a href="https://infourok.ru/user/ivanova-natalya-vitalevna9" target="_blank" style="color: var(--secondary-color); text-decoration: none; font-weight: 600;">Ссылка на Инфоурок</a></p>
-            </div>
+                <h3>Увлечения</h3>
+		<p>Летняя и зимняя рыбалка. Разведение кроликов. Выращивание роз и винограда.</p>
+		<p><a href="https://disk.yandex.ru/d/B3bhJgni_aU1lw"_blank" style="color: var(--secondary-color); text-decoration: none; font-weight: 600;">Ссылка на Фотографии</a></p>
+	    </div>
         </div>
     </div>
 </section>
@@ -584,6 +585,33 @@
                     </div>
                     <h3>Сертификаты</h3>
                     <p><a href="https://drive.google.com/drive/folders/1FjmUvdc8f-tKacau97UmBttWY_BRmUJL" target="_blank" style="color: var(--secondary-color); text-decoration: none; font-weight: 600;">Ссылка на документ</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Материалы на конкурс section -->
+<section id="competition-materials">
+    <div class="container">
+        <h2 class="section-title">Материалы на конкурс "Учитель года"</h2>
+        <div class="card">
+            <!-- Отдельная строка для центрированных элементов -->
+            <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 2rem;">
+                <div class="achievement-item">
+                    <div class="achievement-icon">
+                        <i class="fas fa-file-pdf"></i>
+                    </div>
+                    <h3>Статья</h3>
+                    <p><a href="https://drive.google.com/file/d/1aVdZLY26JRvIOybnRDdNyMCpYroajc-t/view" target="_blank" style="color: var(--secondary-color); text-decoration: none; font-weight: 600;">Ссылка на статью</a></p>
+                </div>
+                
+                <div class="achievement-item">
+                    <div class="achievement-icon">
+                        <i class="fas fa-video"></i>
+                    </div>
+                    <h3>Видео-визитка</h3>
+                    <p><a href="https://drive.google.com/file/d/1jY4W1XzZaA2R0eQzFTlToWrPdZRLpUyS/view" target="_blank" style="color: var(--secondary-color); text-decoration: none; font-weight: 600;">Ссылка на видео-визитку</a></p>
                 </div>
             </div>
         </div>
